test(
	'WebSocket encoding/decoding',
	executable(
		'encoding-test',
		sources: 'encoding_test.cc',
		include_directories: [srcdir, testdir],
		dependencies: [unistdx, gtest]
	)
)

test(
	'base64 encoding/decoding',
	executable(
		'base64-test',
		sources: 'base64_test.cc',
		include_directories: [srcdir, testdir],
		dependencies: [unistdx, gtest]
	)
)

test(
	'sha1 encoding/decoding',
	executable(
		'sha1-test',
		sources: 'sha1_test.cc',
		include_directories: [srcdir, testdir],
		dependencies: [unistdx, gtest]
	)
)

test(
	'WebSocket buffer',
	executable(
		'web-buffer-test',
		sources: 'web_buffer_test.cc',
		include_directories: [srcdir, testdir],
		dependencies: [unistdx, gtest]
	)
)
