test(
	'websocket-test',
	executable(
		'websocket-test',
		sources: 'websocket_test.cc',
		include_directories: [srcdir, testdir],
		dependencies: [unistdx, gtest]
	)
)

test(
	'base64-test',
	executable(
		'base64-test',
		sources: 'base64_test.cc',
		include_directories: [srcdir, testdir],
		dependencies: [unistdx, gtest]
	)
)

test(
	'sha1-test',
	executable(
		'sha1-test',
		sources: 'sha1_test.cc',
		include_directories: [srcdir, testdir],
		dependencies: [unistdx, gtest]
	)
)
