#test(
#	'websocket-test',
#	executable(
#		'websocket-test',
#		sources: 'websocket_test.cc',
#		include_directories: [srcdir, testdir],
#		dependencies: [unistdx, gtest]
#	)
#)

websocket_src = files([
	'base64.cc'
])

#test(
#	'sha1-test',
#	executable(
#		'sha1-test',
#		sources: 'sha1_test.cc',
#		include_directories: [srcdir, testdir],
#		dependencies: [unistdx, gtest]
#	)
#)
