bscheduler_core_src += files([
	'exit_code.cc',
	'kernel.cc',
	'kernel_error.cc',
	'kernel_header.cc',
	'kernel_type.cc',
	'kernel_type_error.cc',
	'mobile_kernel.cc',
	'kernel_type_registry.cc',
	'kernel_instance_registry.cc',
])

install_headers(
	'act.hh',
	'exit_code.hh',
	'kernel.hh',
	'kernel_base.hh',
	'kernel_error.hh',
	'kernel_flag.hh',
	'kernel_header.hh',
	'kernel_instance_registry.hh',
	'kernel_type.hh',
	'kernel_type_error.hh',
	'kernel_type_registry.hh',
	'kernelbuf.hh',
	'kstream.hh',
	'mobile_kernel.hh',
	subdir: join_paths(meson.project_name(), 'kernel')
)
