factory_core_src += files([
	'application.cc',
	'application_kernel.cc',
	'basic_pipeline.cc',
	'io_pipeline.cc',
	'multi_pipeline.cc',
	'parallel_pipeline.cc',
	'thread_context.cc',
	'timer_pipeline.cc',
	'timer_pipeline.cc',
])

libfactory_src += files([
	'basic_factory.cc',
	'external_process_handler.cc',
	'process_handler.cc',
	'process_pipeline.cc',
	'socket_pipeline.cc',
	'unix_domain_socket_pipeline.cc',
])

